Switch to reading exchange data from filesystem

--- a/CryptoExchangeTask.Core/CryptoExchangeTask.Core.csproj
+++ b/CryptoExchangeTask.Core/CryptoExchangeTask.Core.csproj
@@ -7,29 +7,36 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Data\exchange-01.json" />
-    <None Remove="Data\exchange-02.json" />
-    <None Remove="Data\exchange-03.json" />
-    <None Remove="Data\exchange-04.json" />
-    <None Remove="Data\exchange-05.json" />
-    <None Remove="Data\exchange-06.json" />
-    <None Remove="Data\exchange-07.json" />
-    <None Remove="Data\exchange-08.json" />
-    <None Remove="Data\exchange-09.json" />
-    <None Remove="Data\exchange-10.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Data\exchange-01.json" />
-    <EmbeddedResource Include="Data\exchange-02.json" />
-    <EmbeddedResource Include="Data\exchange-03.json" />
-    <EmbeddedResource Include="Data\exchange-04.json" />
-    <EmbeddedResource Include="Data\exchange-05.json" />
-    <EmbeddedResource Include="Data\exchange-06.json" />
-    <EmbeddedResource Include="Data\exchange-07.json" />
-    <EmbeddedResource Include="Data\exchange-08.json" />
-    <EmbeddedResource Include="Data\exchange-09.json" />
-    <EmbeddedResource Include="Data\exchange-10.json" />
+    <None Update="Data\exchange-01.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\exchange-02.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\exchange-03.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\exchange-04.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\exchange-05.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\exchange-06.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\exchange-07.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\exchange-08.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\exchange-09.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\exchange-10.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 
